--- a/Resources/layout/Main.axml
+++ b/Resources/layout/Main.axml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text="Medical App Reminder"
+        android:text="Medication Reminder App"
         android:gravity="center"
         android:textColor="#003B6F"
         android:textSize="30sp"
@@ -72,7 +72,7 @@
             android:text="Remember Me"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/checkBox1"
+            android:id="@+id/RememberMeCheckbox"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="100dp"
