--- a/Resources/layout/MainPageActivity_ScreenSlide.axml
+++ b/Resources/layout/MainPageActivity_ScreenSlide.axml
@@ -3,6 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+  <TextView
+    android:text="'Text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
   <android.support.v4.view.ViewPager
     android:id="@+id/pager"
     android:layout_width="match_parent"
