--- a/Resources/layout/MainScreen.axml
+++ b/Resources/layout/MainScreen.axml
@@ -7,8 +7,9 @@
     android:background="#D2D2D2"
     android:minWidth="25px"
     android:minHeight="25px">
-  <TimePicker
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/timePicker1" />
+  <Button
+    android:id="@+id/nextDayBtn"  
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="View Tomorrow"/>
 </LinearLayout>
