--- a/Resources/layout/GUI.axml
+++ b/Resources/layout/GUI.axml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--This builds the layout for displaying the user's medication-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -6,8 +7,9 @@
     android:background="#D2D2D2"
     android:minWidth="25px"
     android:minHeight="25px">
-    <TimePicker
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/timePicker1" />
+  <Button
+    android:id="@+id/nextDayBtn"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="View Tomorrow"/>
 </LinearLayout>
