--- a/Resources/layout/GUI.axml
+++ b/Resources/layout/GUI.axml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--This builds the layout for displaying the user's medication-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -7,9 +6,19 @@
     android:background="#D2D2D2"
     android:minWidth="25px"
     android:minHeight="25px">
-  <Button
-    android:id="@+id/nextDayBtn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="View Tomorrow"/>
+    <Button
+        android:id="@+id/nextDayBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="View Tomorrow" />
+    <TextView
+        android:text="Time            Medication                 Dosage                 Taken"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView1" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/MedicationView" />
 </LinearLayout>
