--- a/Resources/layout/GUI.axml
+++ b/Resources/layout/GUI.axml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D2D2D2"
     android:minWidth="25px"
-    android:minHeight="25px">
-    <Button
-        android:id="@+id/nextDayBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View Tomorrow" />
-    <TextView
-        android:text="Time            Medication                 Dosage                 Taken"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
+    android:minHeight="25px"
+    android:weightSum="100">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
