--- a/Resources/layout/listview_row.axml
+++ b/Resources/layout/listview_row.axml
@@ -24,4 +24,8 @@
         android:layout_weight="25"
         android:layout_height="wrap_content"
         android:id="@+id/Dosage" />
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
