--- a/Resources/layout/listview_row.axml
+++ b/Resources/layout/listview_row.axml
@@ -11,21 +11,24 @@
         android:layout_width="match_parent"
         android:layout_weight="25"
         android:layout_height="wrap_content"
+        android:textSize="25dp"
         android:id="@+id/Time" />
     <TextView
         android:text="Medication"
         android:layout_width="match_parent"
         android:layout_weight="25"
         android:layout_height="wrap_content"
+        android:textSize="25dp"
         android:id="@+id/Medication" />
     <TextView
         android:text="Dosage"
         android:layout_width="match_parent"
         android:layout_weight="25"
         android:layout_height="wrap_content"
+        android:textSize="25dp"
         android:id="@+id/Dosage" />
     <CheckBox
-        android:id="@+id/checkbox"
+        android:id="@+id/MedicationCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
