--- a/Desktop%20App/MainWindow.xaml
+++ b/Desktop%20App/MainWindow.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Class="MedicationPC.MainWindow"
+<Window x:Class="MedicationPC.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedicationPC"
         mc:Ignorable="d"
-        Title="Medication Application" Height="350" Width="525">
-    <Grid>
-        <Button x:Name="button" Content="Add User" HorizontalAlignment="Left" Margin="206,46,0,0" VerticalAlignment="Top" Width="109" Height="27" Click="button_click"/>
-        <Button x:Name="button1" Content="Update Medication" HorizontalAlignment="Left" Margin="206,78,0,0" VerticalAlignment="Top" Width="109" Click="button1_Click" Height="33"/>
-        <Button x:Name="button2" Content="View Medication" HorizontalAlignment="Left" Margin="206,116,0,0" VerticalAlignment="Top" Width="109" Click="button2_Click" RenderTransformOrigin="0.197,0.402" Height="30"/>
-        <Button x:Name="button3" Content="Remove User" HorizontalAlignment="Left" Margin="206,151,0,0" VerticalAlignment="Top" Width="109" Click="button3_Click" Height="26"/>
+        Title="Medication Application" Height="478.106" Width="795.39" ResizeMode="NoResize">
+    <Grid Margin="0,1,0,-1">
+        <Button x:Name="button" Content="Add User" HorizontalAlignment="Left" Margin="297,140,0,0" VerticalAlignment="Top" Width="174" Height="40" Click="button_click"/>
+        <Button x:Name="button1" Content="Update Medication" HorizontalAlignment="Left" Margin="297,195,0,0" VerticalAlignment="Top" Width="174" Click="button1_Click" Height="50"/>
+        <Button x:Name="button2" Content="View Medication" HorizontalAlignment="Left" Margin="297,259,0,0" VerticalAlignment="Top" Width="174" Click="button2_Click" RenderTransformOrigin="0.197,0.402" Height="45"/>
+        <Button x:Name="button3" Content="Remove User" HorizontalAlignment="Left" Margin="297,318,0,0" VerticalAlignment="Top" Width="174" Click="button3_Click" Height="39"/>
+        <Label x:Name="WelcomeLabel" Content="Medication Reminder" HorizontalAlignment="Left" Margin="262,70,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Arial" FontSize="22" Height="52" Width="239"/>
     </Grid>
 </Window>
