--- a/Desktop%20App/UpdateMedication.xaml
+++ b/Desktop%20App/UpdateMedication.xaml
@@ -1,12 +1,34 @@
-﻿<Window x:Class="MedicationPC.UpdateMedication"
+<Window x:Name="UpdateMedicationWindow" x:Class="MedicationPC.UpdateMedication"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedicationPC"
         mc:Ignorable="d"
-        Title="UpdateMedication" Height="300" Width="300">
-    <Grid>
-        
+        Title="UpdateMedication" Height="600" Width="600" ResizeMode="NoResize">
+    <Window.Background>
+        <RadialGradientBrush>
+            <GradientStop Color="#FF778FFF" Offset="0.77"/>
+            <GradientStop Color="White" Offset="0.76"/>
+        </RadialGradientBrush>
+    </Window.Background>
+    <Grid RenderTransformOrigin="0.502,0.508">
+        <TextBox x:Name="updateUsername" HorizontalAlignment="Left" Height="35" Margin="209,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174" TextChanged="updateUsername_TextChanged" FontSize="22" FontFamily="Arial"/>
+        <Label x:Name="updateUsernameLabel" Content="Username" HorizontalAlignment="Left" Margin="209,116,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.808" Height="36" Width="152" FontSize="26" FontFamily="Arial" FontWeight="Bold"/>
+        <Label x:Name="medicationNameLabel" Content="Medication " HorizontalAlignment="Left" Margin="209,211,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.808" Height="36" Width="174" FontSize="26" FontFamily="Arial" FontWeight="Bold"/>
+        <Label x:Name="timeLabel" Content="Time" HorizontalAlignment="Left" Margin="335,308,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.808" Height="36" Width="152" FontSize="26" FontFamily="Arial" FontWeight="Bold" KeyDown="timeLabel_KeyDown"/>
+        <Label x:Name="dosageLabel" Content="Dosage" HorizontalAlignment="Left" Margin="155,308,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.808" Height="41" Width="152" FontSize="26" FontFamily="Arial" FontWeight="Bold"/>
+        <ComboBox x:Name="medicationBox" HorizontalAlignment="Left" Margin="209,250,0,0" VerticalAlignment="Top" Width="174" Height="43" FontSize="20" SelectionChanged="comboBox_SelectionChanged">
+            <ComboBoxItem Content="Amoxicillin" HorizontalAlignment="Left" Width="181"/>
+            <ComboBoxItem Content="Doxycycline" HorizontalAlignment="Left" Width="181"/>
+            <ComboBoxItem Content="Meloxicam" HorizontalAlignment="Left" Width="181"/>
+        </ComboBox>
+        <ComboBox x:Name="dosageBox" HorizontalAlignment="Left" Margin="142,371,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="comboBox1_SelectionChanged">
+            <ComboBoxItem Content="1" HorizontalAlignment="Left" Width="118" FontSize="22"/>
+            <ComboBoxItem Content="2" HorizontalAlignment="Left" Width="118" FontSize="22"/>
+            <ComboBoxItem Content="3" HorizontalAlignment="Left" Width="118" FontSize="22"/>
+        </ComboBox>
+        <TextBox x:Name="timeTextBox" HorizontalAlignment="Left" Height="35" Margin="335,358,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="22" TextChanged="timeTextBox_TextChanged"/>
+
     </Grid>
 </Window>
