--- a/Desktop%20App/ViewMedication.xaml
+++ b/Desktop%20App/ViewMedication.xaml
@@ -1,12 +1,22 @@
-﻿<Window x:Class="MedicationPC.ViewMedication"
+<Window x:Class="MedicationPC.ViewMedication"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedicationPC"
         mc:Ignorable="d"
-        Title="ViewMedication" Height="300" Width="300">
-    <Grid>
-        
+        Title="ViewMedication" Height="600" Width="600" ResizeMode="NoResize">
+    <Grid x:Name="ViewMedicationGrid">
+        <Grid.Background>
+            <RadialGradientBrush>
+                <GradientStop Color="#FFE5ECFF" Offset="0.77"/>
+                <GradientStop Color="#FF778FFF" Offset="0.77"/>
+                <GradientStop Color="White" Offset="0.763"/>
+            </RadialGradientBrush>
+        </Grid.Background>
+        <Label x:Name="viewusernaemLabel" Content="Username" HorizontalAlignment="Left" Margin="193,171,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.516,-0.092" FontSize="26" FontWeight="Bold" FontFamily="Arial" Width="165" Height="47"/>
+        <Button x:Name="viewButton" Content="View Medication" HorizontalAlignment="Left" Margin="193,327,0,0" VerticalAlignment="Top" Width="213" Click="viewButton_Click" Height="41" FontSize="22"/>
+        <TextBox x:Name="viewUsername" HorizontalAlignment="Left" Height="35" Margin="193,218,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="203" FontSize="22"/>
+
     </Grid>
 </Window>
