--- a/Mobile App/Resources/layout/GUI.axml
+++ b/Mobile App/Resources/layout/GUI.axml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D2D2D2"
+    android:background="#FFFFFF"
     android:minWidth="25px"
     android:minHeight="25px"
     android:weightSum="100">
-     <ListView
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/MedicationView" />
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:layout_weight="1">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#AAAAAA"
+            android:id="@+id/MedicationView" />
+    </LinearLayout>
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="View tomorrow medication"
+        android:id="@+id/NextDayBtn" />
 </LinearLayout>
